<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_discover">Discover</string>
    <string name="lbl_movie_name">The Wolverine 2013\nOfficial Review</string>
    <string name="lbl_best_popular_films_and_serials">BEST POPULAR FILMS AND SERIALS</string>
    <string name="lbl_logan">Logan</string>
    <string name="lbl_rating">8.20</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="lbl_check_movie_show_times">Check Movie\nShowtimes</string>
    <string name="lbl_show_cases">SHOW CASES</string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_showcase_movie_date">15 Dec 2016</string>
    <string name="lbl_movie">X-Men: Apocalypse</string>
    <string name="lbl_best_actors">BEST ACTORS</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_movie_detail">X-Men: The Last Stand</string>
    <string name="lbl_storyline">STORYLINE</string>
    <string name="lbl_rate_movie">RATE MOVIE</string>
    <string name="lbl_actors">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators">MORE CREATORS</string>
    <string name="lbl_original_title">Original Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_genre">Action, Fantasy, Adventure</string>
    <string name="lbl_production">Production</string>
    <string name="lbl_premiere">Premiere</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_about_film">ABOUT FILM</string>
</resources>