<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            app:title="@string/lbl_discover"
            app:titleTextColor="@color/white"
            app:titleCentered="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner"/>

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotsIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:elevation="@dimen/margin_small"
                    app:dotsColor="@color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsWidthFactor="1.0"
                    app:progressMode="false"
                    app:selectedDotColor="@color/colorAccent" />
            </FrameLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmsAndSeriesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flBanner"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_best_popular_films_and_serials"
                android:textColor="@color/colorSecondaryText"/>

            <include
                android:id="@+id/vpBestPopularMovieList"
                android:layout_below="@+id/tvBestPopularFilmsAndSeriesLabel"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/view_pod_movie_list"/>

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTimes"
                android:layout_below="@+id/vpBestPopularMovieList"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/colorPrimaryLight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show_time">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowTimeLabel"
                    android:text="@string/lbl_check_movie_show_times"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_heading_1x"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckMovieShowTimeLocation"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"
                    android:layout_width="@dimen/margin_2xlarge"
                    android:layout_height="@dimen/margin_2xlarge"/>


            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlCheckMovieShowTimes"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@color/colorPrimary"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/colorSecondaryText"/>

            <FrameLayout
                android:id="@+id/flMoviesByGenre"
                android:layout_below="@+id/tabLayoutGenre"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="@dimen/margin_medium_3"
                android:paddingBottom="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/vpMoviesByGenre"
                    layout="@layout/view_pod_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_below="@+id/flMoviesByGenre"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_show_cases"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreShowCasesLabel"
                android:text="@string/lbl_more_showcases"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_alignBaseline="@+id/tvShowCaseLabel"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowcases"
                android:layout_below="@+id/tvShowCaseLabel"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false"
                android:layout_marginTop="@dimen/margin_card_medium_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include
                android:id="@+id/vpActorList"
                layout="@layout/view_pod_actor_list"
                android:layout_below="@id/rvShowcases"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>